--- a/index.html
+++ b/index.html
@@ -537,4 +537,4 @@
         const termUnit = termUnitSelect.value;
         const principalAmount = parseFloat(principalAmountInput.value);
         const interestRate = parseFloat(interestRateInput.value);
-        const interestType = interestTypeSel
+        const interestType = interestTypeSelect.va
