--- a/index.html
+++ b/index.html
@@ -536,5 +536,4 @@
         minDate: "today",
       });
 
-      flatpickr(calculationDateInput, {
-        dateForm
+      flatpickr(calculationDateInput
