--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
         .expired-circle::after {
             content: " 🔴";
         }
+        .certificate-obtained {
+            color: green;
+        }
+        .certificate-not-obtained {
+            color: red;
+        }
         @media (max-width: 768px) {
             .form-group {
                 flex-direction: column;
@@ -133,6 +139,12 @@
             </label>
             <label>Interest Rate (% per annum): <input type="number" id="interestRate" min="0" step="0.1" value="5"></label>
             <label>FD Start Date: <input type="date" id="fdStartDate"></label>
+             <label>FD Certificate:
+                <select id="fdCertificate">
+                    <option value="obtained">Obtained</option>
+                    <option value="not obtained">Not Obtained</option>
+                </select>
+            </label>
             <input type="hidden" id="editIndex">
             <button id="saveRecordBtn">Save Record</button>
             <button id="clearAllRecordsBtn">Clear All</button>
@@ -154,6 +166,7 @@
                     <th>FD Maturity Date</th>
                     <th>FD Renewal Days Remaining</th>
                     <th>Interest</th>
+                     <th>FD Certificate</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -340,11 +353,13 @@
                 } else {
                     renewalClass = 'renewal-expired expired-circle';
                 }
+                const certificateClass = record.fdCertificate === 'obtained' ? 'certificate-obtained' : 'certificate-not-obtained';
 
                 // Apply the class to the Bank Name and Amount cells
                 const bankNameCell = `<td class="${renewalClass}">${record.bankName}</td>`;
                 const amountCell = `<td class="${renewalClass}">${record.amount}</td>`;
                 const renewalCell = `<td class="${renewalClass}">${renewalDays}</td>`;
+                 const certificateCell = `<td class="${certificateClass}">${record.fdCertificate}</td>`;
 
                 row.innerHTML = `
                     ${bankNameCell}
@@ -356,6 +371,7 @@
                     <td>${formatDate(record.fdMaturityDate)}</td>
                     ${renewalCell}
                     <td>${record.interest.toFixed(2)}</td>
+                    ${certificateCell}
                     <td>
                         <button class="editBtn" data-account="${accountHolderName}" data-index="${index}">Edit</button>
                         <button class="deleteBtn" data-account="${accountHolderName}" data-index="${index}">Delete</button>
@@ -404,8 +420,8 @@
             return (principal * rate * days) / 365.25;
         }
 
-        function validateInputs(bankName, amount, duration, interestRate, fdStartDate) {
-            if (!bankName || amount <= 0 || duration <= 0 || interestRate < 0 || !fdStartDate) {
+        function validateInputs(bankName, amount, duration, interestRate, fdStartDate, fdCertificate) {
+            if (!bankName || amount <= 0 || duration <= 0 || interestRate < 0 || !fdStartDate || !fdCertificate) {
                 alert("Please fill all fields with valid values (Amount > 0, Duration > 0, Interest Rate >= 0).");
                 return false;
             }
@@ -424,14 +440,15 @@
             const durationUnit = document.getElementById('durationUnit').value;
             const interestRate = parseFloat(document.getElementById('interestRate').value) || 0;
             const fdStartDate = document.getElementById('fdStartDate').value;
+             const fdCertificate = document.getElementById('fdCertificate').value;
 
-            if (!validateInputs(bankName, amount, duration, interestRate, fdStartDate)) return;
+            if (!validateInputs(bankName, amount, duration, interestRate, fdStartDate, fdCertificate)) return;
 
             const fdMaturityDate = calculateMaturityDate(fdStartDate, duration, durationUnit);
             const fdRenewalDaysRemaining = calculateRenewalDaysRemaining(fdMaturityDate);
             const interest = calculateInterest(amount, interestRate, duration, durationUnit);
             
-            const record = { bankName, amount, duration, durationUnit, interestRate, fdStartDate, fdMaturityDate, fdRenewalDaysRemaining, interest };
+            const record = { bankName, amount, duration, durationUnit, interestRate, fdStartDate, fdMaturityDate, fdRenewalDaysRemaining, interest, fdCertificate };
             let records = getAccountRecords(accountHolderName);
             const editIndex = document.getElementById('editIndex').value;
             if (editIndex !== '') records[editIndex] = record;
@@ -451,6 +468,7 @@
                 document.getElementById('durationUnit').value = record.durationUnit;
                 document.getElementById('interestRate').value = record.interestRate;
                 document.getElementById('fdStartDate').value = record.fdStartDate;
+                document.getElementById('fdCertificate').value = record.fdCertificate;
                 document.getElementById('editIndex').value = index;
             }
         }
@@ -471,6 +489,7 @@
             document.getElementById('durationUnit').value = 'Days';
             document.getElementById('interestRate').value = '5';
             document.getElementById('fdStartDate').value = '';
+            document.getElementById('fdCertificate').value = 'obtained';
             document.getElementById('editIndex').value = '';
         }
 
@@ -499,10 +518,10 @@
                 doc.text(`Fixed Deposit Records - ${accountHolderName}`, 10, 10);
                 const tableData = records.map(r => [
                     r.bankName, r.amount.toString(), r.duration.toString(), r.durationUnit, r.interestRate.toString(),
-                    formatDate(r.fdStartDate), formatDate(r.fdMaturityDate), r.fdRenewalDaysRemaining.toString(), r.interest.toFixed(2)
+                    formatDate(r.fdStartDate), formatDate(r.fdMaturityDate), r.fdRenewalDaysRemaining.toString(), r.interest.toFixed(2), r.fdCertificate
                 ]);
                 doc.autoTable({
-                    head: [['Bank Name', 'Amount', 'Duration', 'Unit', 'Rate', 'Start Date', 'Maturity Date', 'Days Remaining', 'Interest']],
+                    head: [['Bank Name', 'Amount', 'Duration', 'Unit', 'Rate', 'Start Date', 'Maturity Date', 'Days Remaining', 'Interest', 'FD Certificate']],
                     body: tableData,
                     startY: 20
                 });
@@ -530,14 +549,15 @@
                     'Start Date': formatDate(r.fdStartDate),
                     'Maturity Date': formatDate(r.fdMaturityDate),
                     'Days Remaining': r.fdRenewalDaysRemaining,
-                    'Interest': r.interest.toFixed(2)
+                    'Interest': r.interest.toFixed(2),
+                     'FD Certificate': r.fdCertificate
                 }));
                 const ws = XLSX.utils.json_to_sheet(data);
                 const wb = XLSX.utils.book_new();
                 XLSX.utils.book_append_sheet(wb, ws, 'FD Records');
                 XLSX.writeFile(wb, `${accountHolderName}_FD_Records.xlsx`);
             } catch (error) {
-                console.error('Error exporting to Excel:', error);
+                console.error('Error exporting toExcel:', error);
                 alert('Failed to export to Excel. Check the console for details.');
             }
         }
@@ -569,13 +589,14 @@
                         const durationUnit = row['Unit'] || 'Days';
                         const interestRate = parseFloat(row['Interest Rate']) || 0;
                         const fdStartDate = row['Start Date'] || '';
-                        if (!validateInputs(bankName, amount, duration, interestRate, fdStartDate)) {
+                         const fdCertificate = row['FD Certificate'] || 'not obtained';
+                        if (!validateInputs(bankName, amount, duration, interestRate, fdStartDate, fdCertificate)) {
                             throw new Error(`Invalid data in row: ${JSON.stringify(row)}`);
                         }
                         const fdMaturityDate = calculateMaturityDate(fdStartDate, duration, durationUnit);
                         const fdRenewalDaysRemaining = calculateRenewalDaysRemaining(fdMaturityDate);
                         const interest = calculateInterest(amount, interestRate, duration, durationUnit);
-                        return { bankName, amount, duration, durationUnit, interestRate, fdStartDate, fdMaturityDate, fdRenewalDaysRemaining, interest };
+                        return { bankName, amount, duration, durationUnit, interestRate, fdStartDate, fdMaturityDate, fdRenewalDaysRemaining, interest, fdCertificate };
                     });
                     let existingRecords = getAccountRecords(accountHolderName);
                     existingRecords = existingRecords.concat(records);
